[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dmtapi"
version = "2025.0"
description = "Dynamo MetaTrader API"
readme = "README.md"
authors = [
    { name = "Hamim (Dynamo)", email = "developer@dynamotrader.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "httpx>=0.28.1",
    "pendulum>=3.0.0",
    "pydantic>=2.10.6"
]

# development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "mypy>=1.15.0"
]

[project.urls]
Homepage = "https://github.com/dynamotrader/dmtapi"
Repository = "https://github.com/dynamotrader/dmtapi.git"

[tool.setuptools]
packages = { find = { include = ["dmtapi", "dmtapi.*"] } }
